<resources>
    <string name="app_name">To do List</string>
    <string name="label_new_task">Criar Tarefa</string>
    <string name="label_title">Título</string>
    <string name="label_date">Data</string>
    <string name="label_hour">Hora</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_description_new_task">Nova tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_you_dont_have_tasks">Ops! Você não possui tarefas</string>
    <string name="label_task">Tarefas</string>
</resources>