<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            app:title="@string/label_new_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_navigate"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="32dp"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="32dp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            android:hint="@string/label_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/guide_start"
            app:layout_constraintEnd_toEndOf="@+id/guide_end"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_date"
            android:hint="@string/label_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:startIconDrawable="@drawable/ic_calendar"
            app:layout_constraintStart_toStartOf="@+id/guide_start"
            app:layout_constraintEnd_toStartOf="@+id/til_hour"
            app:layout_constraintTop_toBottomOf="@+id/til_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_hour"
            android:hint="@string/label_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_timer"
            app:layout_constraintStart_toEndOf="@+id/til_date"
            app:layout_constraintEnd_toEndOf="@+id/guide_end"
            app:layout_constraintTop_toTopOf="@+id/til_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:text="@string/label_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/btn_new_task"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_new_task"
            android:text="@string/label_new_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            style="@style/Widget.MaterialComponents.Button"/>

</androidx.constraintlayout.widget.ConstraintLayout>